Move old news from index.html to news.html.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -9,38 +9,69 @@
 home page</a>.
 
 <dl>
+
+<dt><b>November 5, 1998</b></dt>
+<dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
+You can read some more on <a href="http://sourceware.cygnus.com/libstdc++/">
+http://sourceware.cygnus.com</a>.
+</dd>
+
+<dt><b>October 27, 1998</b></dt>
+<dd>
+Bernd Schmidt donates <a href="spill.html"> localized spilling support </a>.
+</dd>
+
+<dt><b>September 22, 1998</b></dt>
+<dd>
+<a href="http://www.ibm.com/">IBM Corporation</a> delivers an update
+to the IBM Haifa <a href="scheduler.ps">instruction scheduler</a> and
+new <a href="pipelining.ps">software pipelining and branch
+optimization</a> support.
+</dd>
+
 <dt><b>September 18, 1998</b></dt>
 <dd>
   Michael Hayes donates <a href="/cgi-bin/cvsweb/gcc/README.C4X?rev=1.1">
   <b>c4x port.</b></a>
+</dd>
+
 <dt><b>September 6, 1998</b></dt>
 <dd>
   <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="http://sourceware.cygnus.com/java/gcj-announce.txt"><b>Java front end</b></a>.
 </dd>
+
 <dt><b>September 3, 1998</b></dt>
 <dd>
   <a href="egcs-1.1/egcs-1.1.html"><b>egcs-1.1 is released</b></a>.
 </dd>
+
 <dt><b>August 29, 1998</b></dt>
 <dd>
   <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="chill.html"><b>Chill front end and runtime</b></a>.
 </dd>
+
 <dt><b>August 25, 1998</b></dt>
 <dd>
   David Miller donates rewritten <a href="sparc.html"><b>sparc backend</b></a>.
 </dd>
+
 <dt><b>August 19, 1998</b></dt>
 <dd>
   Mark Mitchell donates <a href="hoist.html"><b>load hoisting and store
   sinking</b></a> support.
 </dd>
+
 <dt><b>July 15, 1998</b></dt>
 <dd>The first snapshot of the rewritten <tt>libstdc++</tt> is available.
-You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
+You can read some more <a href="libstdc++-v3.html">here</a>.
+</dd>
+
 <dt><b>June 29, 1998</b></dt>
 <dd>
-  Mark Mitchell donates <a href="alias.html"><b>alias analysis framework</b></a>.
+  Mark Mitchell donates <a href="alias.html"><b>alias analysis
+framework</b></a>.
 </dd>
+
 <dt><b>May 26, 1998</b></dt>
 <dd>
   We have added two new mailing lists for the egcs project.
@@ -53,18 +84,23 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
   <p>Patch submissions should be sent to <b>egcs-patches</b> instead of the
   main egcs list.  This is primarily to help ensure that patch submissions do
   not get lost in the large volume of the main mailing list.
+</dd>
+
 <dt><b>May 18, 1998</b></dt>
 <dd>
   <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="gcse.html"><b>gcse optimization pass</b></a>.
 </dd>
+
 <dt><b>May 15, 1998</b></dt>
 <dd>
   <a href="egcs-1.0/egcs-1.0.3.html"><b>egcs-1.0.3 released!</b></a>.
 </dd>
+
 <dt><b>March 18, 1998</b></dt>
 <dd>
   <a href="egcs-1.0/egcs-1.0.2.html"><b>egcs-1.0.2 released!</b></a>.
 </dd>
+
 <dt><b>February 26, 1998</b></dt>
 <dd>
   The egcs web pages are now supported by egcs project hardware and
@@ -72,6 +108,7 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
   href="cvs.html"> CVS</a> sources are browsable with the free <a
   href="http://www.freebsd.org/~fenner/cvsweb/">cvsweb</a> package.
 </dd>
+
 <dt><b>February 7, 1998</b></dt>
 <dd>
   Stanford has volunteered to host a high speed mirror for egcs.  This
@@ -79,18 +116,22 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
   Thanks Stanford and Tobin Brockett for the use of their network, disks
   and computing facilities!
 </dd>
+
 <dt><b>January 12, 1998</b></dt>
 <dd>
   <a href="cvs.html"><b>Remote access to CVS sources is available!</b></a>.
 </dd>
+
 <dt><b>January 6, 1998</b></dt>
 <dd>
   <a href="egcs-1.0/egcs-1.0.1.html"><b>egcs-1.0.1 released!</b></a>.
 </dd>
+
 <dt><b>December 3, 1997</b></dt>
 <dd>
   <a href="egcs-1.0/egcs-1.0.html"><b>egcs-1.0 released!</b></a>.
 </dd>
+
 <dt><b>August 15, 1997</b></dt>
 <dd>
   The egcs project is <a href="announcement.html">announced publicly</a>
@@ -98,11 +139,12 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
   snapshot</a>
   is put on-line.
 </dd>
+
 </dl>
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on November 10, 1998.</i>
+<i>Last modified on December 23, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
