--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,7 +91,7 @@ to mess with snapshots, you should definitely be subscribed to the
 
 <p>The snapshots are available from
 <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
-egcs.cygnus.com:/pub/egcs/snapshots</a>.
+ftp://egcs.cygnus.com/pub/egcs/snapshots/</a>.
 
 <p>Note at times you may find newer directories on the server with limited
 permissions.  These represent snapshots that have not yet been verified
@@ -108,7 +108,7 @@ to do since it may become impossible to update to an official snapshot.
 
 <p>Releases are available from <a
 href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-egcs.cygnus.com:/pub/egcs/releases</a>.
+ftp://egcs.cygnus.com/pub/egcs/releases/</a>.
 
 <h2><a name="mirrors">Mirror Sites</a></h2>
 
