Mention mirrors more prominently, directly after the main site.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -91,7 +91,8 @@ to mess with snapshots, you should definitely be subscribed to the
 
 <p>The snapshots are available from
 <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
-ftp://egcs.cygnus.com/pub/egcs/snapshots/</a>.
+ftp://egcs.cygnus.com/pub/egcs/snapshots/</a> and many <a
+href="mirrors.html">mirror sites</a> around the world.
 
 <p>Note at times you may find newer directories on the server with limited
 permissions.  These represent snapshots that have not yet been verified
@@ -108,13 +109,9 @@ to do since it may become impossible to update to an official snapshot.
 
 <p>Releases are available from <a
 href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-ftp://egcs.cygnus.com/pub/egcs/releases/</a>.
+ftp://egcs.cygnus.com/pub/egcs/releases/</a> and many <a
+href="mirrors.html">mirror sites</a> around the world.
 
-<h2><a name="mirrors">Mirror Sites</a></h2>
-
-<p>Several sites around the world mirror our FTP server.  When downloading
-release or snapshots, please try to select an appropriate 
-<a href="mirrors.html"> mirror site</a>. 
 
 <h2><a name="thanks">Acknowledgements</a></h2>
 
@@ -132,7 +129,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on December 23, 1998.</i>
+<i>Last modified on December 25, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
