gdb 4.17 is already released. By Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -762,10 +762,10 @@ website as PTF U453956.  This fix is incorporated in AIX 4.3.1 and above.
 <hr>
 <h2><a name="gdb">Problems debugging EGCS code</a></h2>
 <p>On some systems EGCS will produce dwarf debug records by default; however
-the current gdb-4.16 release may not be able to read such debug records.
+the gdb-4.16 release may not be able to read such debug records.
 
 <p>You can either use the argument "-gstabs" instead of "-g" or pick up
-the current beta copy of gdb-4.17 to work around the problem.
+a copy of gdb-4.17 to work around the problem.
 
 <hr>
 <h2><a name="conflicts">Conflicts when using cvs update</a></h2>
@@ -1014,7 +1014,7 @@ replacement that does can be obtained at
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  December  7, 1998</i>
+<p><i>Last modified:  December 29, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
