Emphasize experimental status.

--- a/htdocs/egcstensions.html
+++ b/htdocs/egcstensions.html
@@ -6,9 +6,10 @@
 <h1 align="center">egcs extensions</h1>
 
 
-<p>This is a list of extensions to egcs which, for one reason or the other,
-did not make it into the official source tree. Please direct feedback and
-bugreports to their respective maintainers, not our mailing lists.</p>
+<p>This is a list of (experimental) extensions to egcs which, for one
+reason or the other, did not (yet) make it into the official source
+tree. Please direct feedback and bugreports to their respective
+maintainers, not our mailing lists.</p>
 
 <h2><a href="http://www.gcc.ml.org/">PentiumGCC</a></h2>
 <p>The PentiumGCC (short PGCC) is an extension of egcs specifically
@@ -25,7 +26,7 @@ achieves substantial speed improvements over egcs and gcc.</p>
 <hr>
 <a name="glimpsebox"></a>
 
-<p><i>Last modified:  December  5, 1998</i>
+<p><i>Last modified:  December 31, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
