Remove dead link to ftp.yggdrasil.com and make link to egcs.cygnus.com generic.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -706,11 +706,8 @@ libstdc++/libio which are included in the EGCS distribution.
 
 <p>If you do need libg++ you can get a libg++ release that works with
 EGCS from <a
-href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/libg++-2.8.1.2.tar.gz">ftp://egcs.cygnus.com/pub/egcs/infrastructure/libg++-2.8.1.2.tar.gz</a>
-or <a
-href="ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz">
-ftp://ftp.yggdrasil.com/private/hjl/libg++-2.8.1.2.tar.gz</a>.  Note
-that the 2.8.2 snapshot pre-dates the 2.8.1.2 release.
+href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>
+Note that the 2.8.2 snapshot pre-dates the 2.8.1.2 release.
 
 <hr>
 <h2><a name="generated_files">autoconf, bison, xgettext, automake, etc</a></h2>
@@ -1021,7 +1018,7 @@ replacement that does can be obtained at
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  December 29, 1998</i>
+<p><i>Last modified:  January  4, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
