--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -706,7 +706,7 @@ libstdc++/libio which are included in the EGCS distribution.
 
 <p>If you do need libg++ you can get a libg++ release that works with
 EGCS from <a
-href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>
+href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/">ftp://egcs.cygnus.com/pub/egcs/infrastructure/</a>.
 Note that the 2.8.2 snapshot pre-dates the 2.8.1.2 release.
 
 <hr>
