--- a/htdocs/hoist.html
+++ b/htdocs/hoist.html
@@ -22,7 +22,7 @@ function:
   {
     int i;
 
-    for (i = 0; i < j; ++i)
+    for (i = 0; i &lt; j; ++i)
       *k = *k + 2 * ((*k) - 1);
   }
 </pre>
@@ -34,8 +34,8 @@ x86 looked like:
 	leal -2(%eax,%eax,2),%eax  # Compute *k + 2 * ((*k) - 1)
 	movl %eax,(%ecx)           # Store *k
 	incl %edx                  # Increment i
-	cmpl %ebx,%edx             # Test i < j
-	jl .L5                     # Loop if i < j
+	cmpl %ebx,%edx             # Test i &lt; j
+	jl .L5                     # Loop if i &lt; j
 </pre>
 With the optimization, the code generated for the loop becomes:
 <pre>
@@ -43,8 +43,8 @@ With the optimization, the code generated for the loop becomes:
 .L5:
 	leal -2(%eax,%eax,2),%eax  # Compute *k + 2 * ((*k) - 1)
 	incl %edx                  # Increment i
-	cmpl %ecx,%edx             # Test i < j
-	jl .L5                     # Loop if i < j
+	cmpl %ecx,%edx             # Test i &lt; j
+	jl .L5                     # Loop if i &lt; j
 	movl %eax,(%ebx)           # Store *k
 </pre>
 Note that in the second case the loads and stores occur outside the
@@ -74,6 +74,6 @@ be loaded into a register, and the sum will be accumulated there.
 After the loop is complete, the value will be stored back to memory.
 
 <hr>
-<i>Last modified on August 19, 1998.</i>
-
-
+<i>Last modified on January  4, 1999.</i>
+</body>
+</html>
