Fix markup. (Close tags in reverse order as opening them.)

--- a/htdocs/glimpsebox.html
+++ b/htdocs/glimpsebox.html
@@ -1,6 +1,8 @@
 <!--GH_SEARCH-->
 <hr>
 <center>
+
+<FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs">
 <table border=5><tr border=0>
 <td align=center valign=middle>
    <a href="http://glimpse.cs.arizona.edu/webglimpse"><img src=http://egcs-www.cygnus.com/glimpse-eye.jpg alt="WG" align=middle width=60 height=34></A>
@@ -10,7 +12,6 @@
    </font>
 </td>
 <td> 
-   <FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs">
    <INPUT NAME=query size=20>
    <INPUT TYPE=submit VALUE="Search">
    <INPUT name=file type=hidden value="/egcs/carton/www/wwwdocs/htdocs/index.html">
@@ -21,6 +22,10 @@ Search:
 <INPUT TYPE=radio NAME=scope VALUE=neighbor CHECKED>
 The neighborhood of this page
 <INPUT TYPE=radio NAME=scope VALUE=full>The full archive
-</td></tr></form></table></center><hr>
+</td></tr></table>
+</FORM>
+
+</center>
+<hr>
 
 <!--GH_END-->
