<tr> does not have a border attribute.

--- a/htdocs/glimpsebox.html
+++ b/htdocs/glimpsebox.html
@@ -3,8 +3,8 @@
 <center>
 
 <FORM method=get ACTION="/cgi-bin/webglimpse/egcs/carton/www/wwwdocs/htdocs">
-<table border=5><tr border=0>
-<td align=center valign=middle>
+<table border=5>
+<tr><td align=center valign=middle>
    <a href="http://glimpse.cs.arizona.edu/webglimpse"><img src=http://egcs-www.cygnus.com/glimpse-eye.jpg alt="WG" align=middle width=60 height=34></A>
    <br>
    <font size=-3>
