Use <h2> instead of <dt>, use <h1> for the main header. Related markup fixes.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -2,21 +2,20 @@
 <head>
 <title>Contributing Code</title>
 </head>
+
 <body>
-<h2><a name="contributing-code">CONTRIBUTING CODE</a></h2>
+<h1 align="center">Contributing Code</a></h1>
 
-<dl>
-  <dt><b>Coding Standards:</b></dt>
+<h2>Coding Standards</h2>
 
-  <dd>All contributions must conform to the <a
+  <p>All contributions must conform to the <a
   href="http://www.gnu.ai.mit.edu/prep/standards_toc.html">GNU Coding
   Standards</a>.  Submissions which do not conform to the standards will
-  be returned with a request to reformat the changes.<p>
-  </dd>
+  be returned with a request to reformat the changes.
 
-  <dt><b>Copyright Assignment:</b></dt>
+<h2>Copyright Assignment</h2>
 
-  <dd>Before we can accept code contributions from you, we need a
+  <p>Before we can accept code contributions from you, we need a
   copyright assignment form filled out.
 
   <ul>
@@ -50,17 +49,16 @@
    for you.
   </ul>
 
-  <br>Note:  Many of these forms have a place for &quot;name of program&quot;.
+  <p>Note:  Many of these forms have a place for &quot;name of program&quot;.
   Insert the name of <b>one</b> program in that place, &quot;gcc&quot;,
   &quot;g77&quot;, &quot;libstdc++&quot;, etc.  Do <b>not</b> write
   &quot;egcs&quot; in that location.  If you use &quot;egcs&quot; or multiple
   program names, the FSF will reject the assignment and we won't be able to
-  use your contribution.<p>
-  </dd>
+  use your contribution.
 
-  <dt><b>Submitting Patches:</b></dt>
+<h2>Submitting Patches</h2>
 
-  <dd>Every patch must have several pieces of information before we can
+  <p>Every patch must have several pieces of information before we can
   properly evaluate it.
 
   <ul>
@@ -77,16 +75,14 @@
        latest version of GNU diff.
   </ul>
 
-  <br>When you have all these pieces, bundle them up in a mail message and
+  <p>When you have all these pieces, bundle them up in a mail message and
   send it to
   <a href="mailto:egcs-patches@cygnus.com">egcs-patches@cygnus.com</a>.
   All patches and related discussion should be sent to the egcs-patches
   mailinglist.
-  </dd>
-</dl>
 
 <hr>
-<i>Last modified on September 24, 1998.</i>
+<i>Last modified on January  7, 1999.</i>
 
 <hr>
 <a href="">Return to the egcs home page</a>
