--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align="center">Contributing Code</a></h1>
+<h1 align="center">Contributing Code</h1>
 
 <h2>Coding Standards</h2>
 
