--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -42,7 +42,7 @@ if you are mirroring the egcs pages so we can note it here!
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 <LI>Tokyo, Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
-<LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a></a>
+<LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
 <li>Japan: <a href="ftp://ftp.win.or.jp/pub/lang/egcs">ftp.win.or.jp</a>
 <li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a>
 <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
