--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -316,7 +316,7 @@ build).  Use them at your own risk.
 <h2><a name="broken">Problems with code that works with other compilers or earlier gcc releases</a></h2>
 
 <p>Unfortunately, improvements in tools that are widely used are
-sooner or later bound to break <emph>something</emph>.  Sometimes, the
+sooner or later bound to break <em>something</em>.  Sometimes, the
 code that breaks was wrong, and then that code should be fixed, even
 if it works for earlier versions of gcc or other compilers.  The
 following problems with some releases of widely used packages have
