--- a/htdocs/c++bugs.html
+++ b/htdocs/c++bugs.html
@@ -99,7 +99,7 @@ others.
 
 <p>Many of the standard library features are not implemented in egcs
 1.1. Others, such as iostreams, are supported, but not in a
-complianted way (e.g. ostream is not basic_ostream<char>, and not
+complianted way (e.g. ostream is not basic_ostream&#lt;char>, and not
 declared in std::).
 
 <p>Work is underway to complete a <a href="libstdc++-v3.html">new C++
