Revise entire page. Together with Rich Churcher <rich.c@es.co.nz>.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -1,10 +1,13 @@
 <html>
 <head>
+<meta name="description" content="Anonymous read-only access to the egcs project CVS source repository.">
+<meta name="keywords" content="CVS, version control, egcs, source, public, repository">
+ 
 <title> Anonymous readonly CVS access</title>
 </head>
-<body>
 
-<p>January 12, 1998
+<body>
+<h1>Anonymous read-only CVS access</h1>
 
 <p>In an ongoing effort to accelerate development of egcs and provide an
 open development environment, we are making the egcs CVS source repository
@@ -14,44 +17,61 @@ available readonly to the public at large.
 waiting for periodic snapshots.  You'll even be able to check out the
 release branch(es) since they also live in the CVS repository.
 
-<p>If you would like to <a href="/cgi-bin/cvsweb">browse the CVS
-history online</a> via your web browser it is available via <a
-href="http://www.freebsd.org/~fenner/cvsweb/">cvsweb</a>.
+<p>Also note that you may wish to review the CVS manual which is provided
+in texinfo form in the CVS sources.
 
-<p>If you don't already have CVS, we recommend you pick up a recent copy from
-cyclic software <a href="http://www.cyclic.com"> at http://www.cyclic.com</a>.
+<ul>
+  <li><a href="/cgi-bin/cvsweb" title="/cgi-bin/cvsweb">Browse the CVS
+  history online</a> via your web browser.
 
+  <li><a href="http://www.cyclic.com">Visit Cyclic Software</a> to pick up a
+  recent copy of CVS.  Links to books on the subject can also be found
+  there.
+
+  <li>A link to a reasonably simple introduction to CVS can be found
+  at <a href="http://www.cyclic.com/cvs/doc-blandy.html">Cyclic</a>,
+  which is also available in an <a
+  href="http://www.loria.fr/~molli/cvs/doc/cvs_toc.html">HTML
+  version</a>
+
+</ul>
+
+
+<h2>Using the CVS repository</h2>
 <p>Assuming you have CVS installed on your machine you can check out the egcs
 sources with the following sequence of commands:
 
-<p>set CVSROOT in your environment to
+<p>Set CVSROOT in your environment to
 
-<p>:pserver:anoncvs@egcs.cygnus.com:/egcs/carton/cvsfiles 
+<pre>	:pserver:anoncvs@egcs.cygnus.com:/egcs/carton/cvsfiles</pre> 
 
-<p>Or alternately add "-d :pserver:anoncvs@egcs.cygnus.com:/egcs/carton/cvsfiles"
-in the CVS commands below (place it immediately after "cvs" -- ie
-before any other cvs arguments).
+<p>Or alternately add 
+<pre>	-d :pserver:anoncvs@egcs.cygnus.com:/egcs/carton/cvsfiles</pre>
+in the CVS commands below (place it immediately after <code>"cvs"</code> -- ie
+before any other CVS arguments).
 
-<p>Issue the command "cvs login".  You will be prompted for a password;
-reply with "anoncvs".
+Issue the command <code>"cvs login"</code>.  You will be prompted for
+a password; reply with <code>"anoncvs"</code>.
 
-<p>Issue the command "cvs -z 9 co egcs" to check out the egcs sources.
+<p>Issue the command 
+<pre>	cvs -z 9 co egcs</pre> 
+to check out the egcs sources.
 
-<p>Once you've got the repository checked out "cvs update" will sync your
-local copy with those in the repository.  See the CVS manual for additional
-information on how to use CVS.
+<p>Once you've got the repository checked out <code>"cvs
+update"</code> will sync your local copy with the repository.  See the
+CVS manual for additional information on how to use CVS.
 
 <p>We recommend you read the <a href="faq.html#generated_files"> 
 FAQ entry regarding additional tools you may need when building from CVS
 sources </a>
 
 <p> You can check out the egcs-1.0.x release branch with the following command:
-<pre>
-cvs -z 9 co -regcs_1_00_branch egcs
-</pre>
 
-<p>By changing the "-r" argument above you can check out particular releases
-or snapshots or the latest snapshot.
+<pre>	cvs -z 9 co -regcs_1_00_branch egcs</pre>
+
+<p>By changing the <code>"-r"</code> argument above you can check out
+particular releases or snapshots or the latest snapshot.
+
 <ul>
   <li> egcs_1_0_2_release
   <li> egcs_1_0_1_release
@@ -60,29 +80,20 @@ or snapshots or the latest snapshot.
   <li> egcs_latest_snapshot
 </ul>
 
+
+<H2>egcs project web pages</h2>
+
+<p>The web pages for the egcs project are also in the CVS repository
+and you can check them out, submit patches, etc just like you do for
+the compiler itself.  Use <code>"cvs co wwwdocs"</code> to check out
+the web pages.
+
 <p>Enjoy!
 
-<p>Also note that you may wish to review the CVS manual which is provided
-in texinfo form in the CVS sources.
-<a href="http://www.cyclic.com/cvs/doc-blandy.html">
-http://www.cyclic.com/cvs/doc-blandy.html</a> contains a link to an
-reasonably simple introduction to CVS, which is available in html as
-<a
-href="http://www.loria.fr/~molli/cvs/doc/cvs_toc.html">http://www.loria.fr/~molli/cvs/doc/cvs_toc.html</a>.
-Links to some books can be found on <a href="http://www.cyclic.com">
-http://www.cyclic.com</a>.
-
-<p>One final note, the web pages for the egcs project are also in the
-CVS repository and you can check them out, submit patches, etc just like
-you do for the compiler itself.  Use "cvs co wwwdocs" to check out the
-web pages.
-
-
-
 <hr>
-<i>Last modified on July 2, 1998.</i>
-
+<i>Last modified on January  8, 1999.</i>
 <hr>
+
 <a href="">Return to the egcs home page</a>
 <!--#include virtual="/glimpsebox.html"-->
 </body>
