Move full TOC to the beginning.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -3,6 +3,7 @@
 <title>EGCS Frequently Asked Questions</title>
 </head>
 <body>
+
 <h1 align="center">EGCS Frequently Asked Questions</h1>
 
 <p>This FAQ tries to answer specific questions concerning EGCS. For
@@ -14,25 +15,90 @@ comp.lang.c++ FAQ</a>, and the
 comp.std.c++ FAQ</a>.
 
 <hr>
-<h1>Sections:</h1>
-<ul>
-	<li><a href="#general">General information</a>
-	<li><a href="#installation">Installation</a>
-	<li><a href="#testsuite">Testsuite problems</a>
-	<li><a href="#platform">Platform-specific issues</a>
-	<li><a href="#misc">Miscellaneous</a>
-</ul>
-<hr>	
 
+<h1>Questions</h1>
+<ol>
+  <li><a href="#general">General information</a>
+  <ol>
+     <li><a href="#gcc-2-diff">How is EGCS different from gcc2?</a>
+     <li><a href="#open-development">What is an open development model?</a>
+     <li><a href="#release-fork">Releases and Forking</a>
+     <li><a href="#bugreport">How to report bugs</a>
+  </ol> 
+
+  <li><a href="#installation">Installation</a>
+  <ol>
+    <li><a href="#morelibc">`_IO_stdfile_0_lock' was not declared in this scope</a>
+    <li><a href="#fortran">Problems building the Fortran compiler</a>
+    <li><a href="#multiple">How to install both gcc2 and EGCS</a>
+    <li><a href="#rpath">Dynamic linker is unable to find GCC libraries</a>
+    <li><a href="#rpath">libstdc++/libio tests fail badly with --enable-shared</a>
+    <li><a href="#gas">GCC can not find GNU as/GNU ld</a>
+    <li><a href="#environ">cpp: Usage:... Error</a>
+  </ol>
+
+  <li><a href="#testsuite">Testsuite problems</a>
+  <ol>
+    <li><a href="#dejagnu">Unable to run the testsuite</a>
+    <li><a href="#testoptions">How do I pass flags like
+        <code>-fnew-abi</code> to the testsuite?</a>
+    <li><a href="#multipletests">How can I run the test suite with multiple options?</a>
+  </ol>
+
+  <li><a href="#platform">Platform-specific issues</a>
+  <ol>    	  
+    <li><a href="#mips">Problems building on MIPS platforms</a>
+    <li><a href="#x86eh">Problems with exception handling on x86 platforms</a>
+    <li><a href="#asmclobber">Problems with <tt>Invalid `asm' statement</tt>s</a>
+    <li><a href="#hpcompare">Bootstrap comparison failures on HPs</a>
+    <li><a href="#makebugs">Bootstrap loops rebuilding cc1 over and over</a>
+    <li><a href="#linuxkernel">Problems building Linux kernels</a>  
+    <li><a href="#windows">EGCS with Windows</a>  
+    <li><a href="#os2">EGCS with OS/2</a>
+    <li><a href="X11R6">How do I compile X11 headers with g++</a>  
+    <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
+    <li><a href="#axparch">Assembler errors on Alpha targets</a>
+    <li><a href="#sig11">Signal 11 on Linux</a>
+    <li><a href="#bigtoc">Link failures using -bbigtoc on AIX 4.1</a>
+    <li><a href="#aixcoff">AIX 4.3 archive libraries ("not a COFF file")</a>
+    <li><a href="#aix43">Unable to bootstrap egcs-1.1 on AIX 4.3</a>
+    <li><a href="#aixas">Assembler error on AIX 4.3.0</a>
+    <li><a href="#o32abi">Does EGCS support the O32 ABI on IRIX 6?</a>
+    <li><a href="#irix6n32bugs">Bugs in N32 and N64 ABI implementation on IRIX 6</a>
+    <li><a href="#irixlinks">Links to other FAQs for GCC on IRIX platforms?</a>
+    <li><a href="#next">Problems with egcs on NEXTSTEP 3.x systems</a>
+    <li><a href="#cross">How to build a cross compiler</a>
+  </ol>
+
+  <li><a href="#misc">Miscellaneous</a>
+  <ol>
+    <li><a href="#memexhausted">Virtual memory exhausted</a>
+    <li><a href="#broken">Problems with code that works with other compilers or earlier gcc releases</a>
+    <ul>
+      <li><a href="#fdzero">FD_ZERO macro</a>
+      <li><a href="#octave">Octave 2.0.13 does not compile</a>
+    </ul>
+    <li><a href="#snapshot">Snapshots, how, when, why</a>
+    <li><a href="#friend">Friend Templates</a>
+    <li><a href="#libg++">Where to find libg++</a>
+    <li><a href="#generated_files">Why do I need autoconf, bison, xgettext, automake, etc </a>
+    <li><a href="#gdb">Problems debugging EGCS code</a>
+    <li><a href="#conflicts">Conflicts when using cvs update </a>
+    <li><a href="#gnat">Using EGCS with GNAT/Ada</a>
+    <li><a href="#gpc">Using EGCS with GNU Pascal</a>
+    <li><a href="#cvssnapshots">Using CVS to download snapshots </a>
+    <li><a href="#picflag-needed">Why can't I build a shared library?</a>
+    <li><a href="spam.html">Dealing with spam on the lists</a>
+    <li><a href="#squangle">How to work around too long C++ symbol names? 
+	 (<tt>-fsquangle</tt>)</a>
+  </ol>
+</ol>
+
+
+<hr>
 <a name="general"></a>
 <h1>General information</h1>
-<ol>
-  <li><a href="#gcc-2-diff">How is EGCS different from gcc2?</a>
-  <li><a href="#open-development">What is an open development model?</a>
-  <li><a href="#release-fork">Releases and Forking</a>
-  <li><a href="#bugreport">How to report bugs</a>
-</ol> 
-<hr>
+
 <h2><a name="gcc-2-diff">How is EGCS different from gcc2?</a></h2>
 
 <p>Six years ago, gcc version 1 had reached a point of stability.  For the
@@ -206,19 +272,11 @@ compressed CPP output as an attachment to your message.
 reports over those limits will be bounced.  Most compressed but reports are
 allowed to exceed the limits unless they are unreasonably huge.
 
+
 <hr>
- <a name="installation"></a>
+<a name="installation"></a>
 <h1>Installation</h1>
-<ol>
-  <li><a href="#morelibc">`_IO_stdfile_0_lock' was not declared in this scope</a>
-  <li><a href="#fortran">Problems building the Fortran compiler</a>
-  <li><a href="#multiple">How to install both gcc2 and EGCS</a>
-  <li><a href="#rpath">Dynamic linker is unable to find GCC libraries</a>
-   <li><a href="#rpath">libstdc++/libio tests fail badly with --enable-shared</a>
-  <li><a href="#gas">GCC can not find GNU as/GNU ld</a>
-  <li><a href="#environ">cpp: Usage:... Error</a>
-</ol>
-<hr>
+
 <h2><a name="morelibc">`_IO_stdfile_0_lock' was not declared in this scope</a></h2>
 <p>If you get this error, it means either EGCS incorrectly guessed what version
 of libc is installed on your Linux system, or you incorrectly specified a
@@ -325,14 +383,7 @@ or end of these variables is an implicit '.' and will cause problems.
 <hr>
 <a name="testsuite"></a>
 <h1>Testsuite problems</h1>
-<ol>
-  <li><a href="#dejagnu">Unable to run the testsuite</a>
-  <li><a href="#testoptions">How do I pass flags like
-         <code>-fnew-abi</code> to the testsuite?</a>
-  <li><a href="#multipletests">How can I run the test suite with multiple options?</a>
-</ol>
 
-<hr>
 <h2><a name="dejagnu">Unable to run the testsuite</a></h2>
 <p>If you get a message about unable to find "standard.exp" when trying to
 run the EGCS testsuites, then your dejagnu is too old to run the EGCS tests.
@@ -372,34 +423,11 @@ with <code>-fPIC</code>, once with <code>-fpic</code>, and once with
 no additional flags.
 <p>This technique is particularly useful on multilibbed targets.
 
+
 <hr>
 <a name="platform"></a>
 <h1>Platform-specific issues</h1>
-<ol>    	  
-   <li><a href="#mips">Problems building on MIPS platforms</a>
-  <li><a href="#x86eh">Problems with exception handling on x86 platforms</a>
-  <li><a href="#asmclobber">Problems with <tt>Invalid `asm' statement</tt>s</a>
-  <li><a href="#hpcompare">Bootstrap comparison failures on HPs</a>
-  <li><a href="#makebugs">Bootstrap loops rebuilding cc1 over and over</a>
-  <li><a href="#linuxkernel">Problems building Linux kernels</a>  
-  <li><a href="#windows">EGCS with Windows</a>  
-  <li><a href="#os2">EGCS with OS/2</a>
-  <li><a href="X11R6">How do I compile X11 headers with g++</a>  
-  <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
-  <li><a href="#axparch">Assembler errors on Alpha targets</a>
-  <li><a href="#sig11">Signal 11 on Linux</a>
-  <li><a href="#bigtoc">Link failures using -bbigtoc on AIX 4.1</a>
-  <li><a href="#aixcoff">AIX 4.3 archive libraries ("not a COFF file")</a>
-  <li><a href="#aix43">Unable to bootstrap egcs-1.1 on AIX 4.3</a>
-  <li><a href="#aixas">Assembler error on AIX 4.3.0</a>
-  <li><a href="#o32abi">Does EGCS support the O32 ABI on IRIX 6?</a>
-  <li><a href="#irix6n32bugs">Bugs in N32 and N64 ABI implementation on IRIX 6</a>
-  <li><a href="#irixlinks">Links to other FAQs for GCC on IRIX platforms?</a>
-  <li><a href="#next">Problems with egcs on NEXTSTEP 3.x systems</a>
-  <li><a href="#cross">How to build a cross compiler</a>
-</ol>
 
-<hr>
 <h2><a name="mips">Problems building on MIPS platforms</a></h2>
 <p>EGCS requires the use of GAS on all versions of IRIX, except IRIX 6, due
 to limitations in older IRIX assemblers.
@@ -773,29 +801,7 @@ for any symlinks which point to &lt;file&gt;.new to be changed to &lt;file&gt;-n
 <hr>
 <a name="misc"></a>  
 <h1>Miscellaneous</h1>
-<ol>
-  <li><a href="#memexhausted">Virtual memory exhausted</a>
-  <li><a href="#broken">Problems with code that works with other compilers or earlier gcc releases</a>
-  <ul>
-    <li><a href="#fdzero">FD_ZERO macro</a>
-    <li><a href="#octave">Octave 2.0.13 does not compile</a>
-  </ul>
-  <li><a href="#snapshot">Snapshots, how, when, why</a>
-  <li><a href="#friend">Friend Templates</a>
-  <li><a href="#libg++">Where to find libg++</a>
-  <li><a href="#generated_files">Why do I need autoconf, bison, xgettext, automake, etc </a>
-  <li><a href="#gdb">Problems debugging EGCS code</a>
-  <li><a href="#conflicts">Conflicts when using cvs update </a>
-  <li><a href="#gnat">Using EGCS with GNAT/Ada</a>
-  <li><a href="#gpc">Using EGCS with GNU Pascal</a>
-  <li><a href="#cvssnapshots">Using CVS to download snapshots </a>
-  <li><a href="#picflag-needed">Why can't I build a shared library?</a>
-  <li><a href="spam.html">Dealing with spam on the lists</a>
-  <li><a href="#squangle">How to work around too long C++ symbol names? 
-	 (<tt>-fsquangle</tt>)</a>
-</ol>
 
-<hr>
 <h2><a name="memexhausted">Virtual memory exhausted error</a></h2>
 <p> This error means your system ran out of memory; this can happen for large
 files, particularly when optimizing.  If you're getting this error you should
@@ -1072,7 +1078,7 @@ initialized by default), then rebuilding egcs and any C++ libraries.
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  January  10, 1999</i>
+<p><i>Last modified:  January 12, 1999</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
