--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -620,7 +620,7 @@ working on a generic os/2 port with pgcc.  The current code code can be found
 at <a href="http://www.goof.com/pcg/os2">http://www.goof.com/pcg/os2</a>.
 
 <hr>
-<h2><a name="X11R6">How do I compile X11 headers with g++</h2>
+<h2><a name="X11R6">How do I compile X11 headers with g++</a></h2>
 <p>
 When compiling X11 headers with a egcs 2.92.33 or newer, g++ will
 complain that types are missing. These headers assume that omitting
